@@ -18,4 +18,4 @@ classifier =
 
 [files]
 packages =
-    rigolfiletools
+    dp800tools
