@@ -2,9 +2,11 @@
 envlist=py27,py34,py35,pep8
 
 [testenv]
-deps=-rtest-requirements.txt
-     -rrequirements.txt
-commands=py.test dp800tools/tests
+deps= -r{toxinidir}/test-requirements.txt
+      -r{toxinidir}/requirements.txt
+commands=
+    py.test -vv dp800tools/tests
 
 [testenv:pep8]
-commands=pep8 dp800tools
+commands=
+    pep8 dp800tools
